--- a/About.html
+++ b/About.html
@@ -16,31 +16,63 @@
 </head>
 <body>
     <!-- Start of Announcement bar -->
-  <div class="announcement-bar w-100 bg-MainColor text-white">
-    <div class="container d-flex justify-content-lg-between align-items-center">
-      <span class="phone-number">Call: +1 078 2376</span>
-      <div class="sales">New year sale - 30% off</div>
-      <div>
-        <a class="login text-decoration-none text-white">
-        <svg class="icon icon-user" width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M5 0C3.07227 0 1.5 1.57227 1.5 3.5C1.5 4.70508 2.11523 5.77539 3.04688 6.40625C1.26367 7.17188 0 8.94141 0 11H1C1 8.78516 2.78516 7 5 7C7.21484 7 9 8.78516 9 11H10C10 8.94141 8.73633 7.17188 6.95312 6.40625C7.88477 5.77539 8.5 4.70508 8.5 3.5C8.5 1.57227 6.92773 0 5 0ZM5 1C6.38672 1 7.5 2.11328 7.5 3.5C7.5 4.88672 6.38672 6 5 6C3.61328 6 2.5 4.88672 2.5 3.5C2.5 2.11328 3.61328 1 5 1Z" fill="#fff"></path>
-      </svg>
-        <span class="">Login</span>
-      </a>
-        <svg class="ms-2 me-2" width="2" height="9" viewBox="0 0 2 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path opacity="0.4" d="M1 0.5V8.5" stroke="#FEFEFE" stroke-linecap="round"></path>
-      </svg>
-      <button class="bg-MainColor border-0 text-white px-0">
-        <img
-          class="ms-2 me-1 flag-USA" src="assets/img/MainPage/USA flag/usd.jpg" alt="USA flag For dollar" /><span
-          class="ps-1">USD</span>
-          <svg class="icon icon-dropdown chevron-down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
-            <polyline points="6 9 12 15 18 9"></polyline>
+    <div class="announcement-bar w-100 bg-MainColor text-white">
+      <div class="container d-flex justify-content-lg-between align-items-center">
+        <span class="phone-number">Call: +1 078 2376</span>
+        <div class="sales">New year sale - 30% off</div>
+        <div>
+          <a href="Login.html" class="login text-decoration-none text-white">
+          <svg class="icon icon-user" width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M5 0C3.07227 0 1.5 1.57227 1.5 3.5C1.5 4.70508 2.11523 5.77539 3.04688 6.40625C1.26367 7.17188 0 8.94141 0 11H1C1 8.78516 2.78516 7 5 7C7.21484 7 9 8.78516 9 11H10C10 8.94141 8.73633 7.17188 6.95312 6.40625C7.88477 5.77539 8.5 4.70508 8.5 3.5C8.5 1.57227 6.92773 0 5 0ZM5 1C6.38672 1 7.5 2.11328 7.5 3.5C7.5 4.88672 6.38672 6 5 6C3.61328 6 2.5 4.88672 2.5 3.5C2.5 2.11328 3.61328 1 5 1Z" fill="#fff"></path>
         </svg>
-        </button>
+          <span>Login</span>
+          <svg class="ms-2 me-2" width="2" height="9" viewBox="0 0 2 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path opacity="0.4" d="M1 0.5V8.5" stroke="#FEFEFE" stroke-linecap="round"></path>
+        </svg>
+        </a>
+          
+        <div class="dropdown d-inline-block">
+        <button data-bs-toggle="dropdown" aria-expanded="false" class="bg-MainColor border-0 text-white px-0 disappear ">
+          <img
+            class="ms-2 me-1 flag-USA" src="assets/img/MainPage/USA flag/usd.jpg" alt="USA flag For dollar"/><span
+            class="ps-1">USD</span>
+            <svg class="icon icon-dropdown chevron-down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+              <polyline points="6 9 12 15 18 9"></polyline>
+          </svg>
+          </button>
+  
+          <ul class="dropdown-menu flags rounded-1">
+            <li><a class="dropdown-item" href="#">
+              <img src="assets/img/MainPage/USA flag/usd.jpg" alt="USA Flasg" />
+              <span>USA</span>
+  
+            </a></li>
+            <li><a class="dropdown-item" href="#">
+              <img src="assets/img/MainPage/flags/cad.jpg" alt="USA Flasg" />
+              <span>CAD</span>
+  
+            </a></li>
+            <li><a class="dropdown-item" href="#">
+              <img src="assets/img/MainPage/flags/eur.jpg" alt="USA Flasg" />
+              <span>EUR</span>
+  
+            </a></li>
+            <li><a class="dropdown-item" href="#">
+              <img src="assets/img/MainPage/flags/jpy.jpg" alt="USA Flasg" />
+              <span>JPY</span>
+  
+            </a></li>
+            <li><a class="dropdown-item" href="#">
+              <img src="assets/img/MainPage/flags/gbp.jpg" alt="USA Flasg" />
+              <span>GBP</span>
+  
+            </a></li>
+          </ul>
         </div>
+  
+          </div>
+      </div>
     </div>
-  </div>
   <!-- End of Announcement bar -->
 
   <!-- Start of Navbar -->
