--- a/index.html
+++ b/index.html
@@ -1350,9 +1350,9 @@
       <!-- Start if Video marketing -->
       <section class="video-marketing d-flex justify-content-center align-items-center my-5 position-relative" id="video-marketing">
         <div class="bg-transp"></div>
-        <div class="icon-parent position-absolute">
+        <div class="icon-parent position-absolute overflow-hidden">
 
-          <button type="button" class="border-0 bg-transparent d-inline-block click-to-show" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <button type="button" class="border-0 bg-transparent d-inline-block click-to-show w-100" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <svg width="22" height="26" viewBox="0 0 22 26" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M21.5 12.134C22.1667 12.5189 22.1667 13.4811 21.5 13.866L2 25.1244C1.33333 25.5093 0.499999 25.0281 0.499999 24.2583L0.5 1.74167C0.5 0.971867 1.33333 0.490743 2 0.875643L21.5 12.134Z" fill="#FEFEFE"></path>
             </svg>
